--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "npm": "please-use-yarn"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "firebase": "^9.9.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -37,6 +39,6 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
