--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.2",
     "firebase": "^9.9.2",
     "next": "12.2.5",
     "react": "18.2.0",
