--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "firebase": "^9.9.2",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
