--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
     "firebase": "^9.9.2",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moment": "^1.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
